docs: add end2end example on creating a basic text-classification dataset (#4208)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

This PR includes 2 features towards the #4178 issue.
- A tutorial for the creation of a `FeedbackDataset` for
`text-classification`.
- A new script has been added to run the notebooks automatically, via
end2end.yml workflow.

Closes #4179 and #4220

**Type of change**

(Remember to title the PR according to the type of change)

- [ ] Documentation update

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes.)

- [ ] `sphinx-autobuild` (read [Developer
Documentation](https://docs.argilla.io/en/latest/community/developer_docs.html#building-the-documentation)
for more details)

**Checklist**

- [ ] I added relevant documentation
- [x] I followed the style guidelines of this project
- [x] I did a self-review of my code
- [ ] I made corresponding changes to the documentation
- [ ] My changes generate no new warnings
- [ ] I filled out [the contributor form](https://tally.so/r/n9XrxK)
(see text above)
- [ ] I have added relevant notes to the `CHANGELOG.md` file (See
https://keepachangelog.com/)

---------

Co-authored-by: Agustin Piqueres <agus@Agustins-MacBook-Pro.local>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: davidberenstein1957 <david.m.berenstein@gmail.com>
Co-authored-by: kursathalat <86690946+kursathalat@users.noreply.github.com>
Co-authored-by: sdiazlor <sdiazlor@gmail.com>
Co-authored-by: Sara Han <127759186+sdiazlor@users.noreply.github.com>

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -74,6 +74,28 @@ jobs:
       pytestArgs: tests/unit
     secrets: inherit
 
+  run_end2end_tests:
+    strategy:
+      matrix:
+        include:
+          - searchEngineDockerImage: docker.elastic.co/elasticsearch/elasticsearch:8.8.2
+            searchEngineDockerEnv: '{"discovery.type": "single-node", "xpack.security.enabled": "false"}'
+            coverageReport: coverage-elasticsearch-8.8.2
+            runsOn: extended-runner
+          - searchEngineDockerImage: opensearchproject/opensearch:2.4.1
+            searchEngineDockerEnv: '{"discovery.type": "single-node", "plugins.security.disabled": "true"}'
+            coverageReport: coverage-opensearch-2.4.1
+            runsOn: ubuntu-latest
+    name: Run end2end tests
+    uses: ./.github/workflows/end2end-examples.yml
+    needs: check_repo_files
+    if: needs.check_repo_files.outputs.end2endChanges == 'true'
+    with:
+      runsOn: ${{ matrix.runsOn }}
+      searchEngineDockerImage: ${{ matrix.searchEngineDockerImage }}
+      searchEngineDockerEnv: ${{ matrix.searchEngineDockerEnv }}
+    secrets: inherit
+
   run_unit_test_with_extra_engines:
     strategy:
       matrix:
