--- a/docker/nginx/docker-compose.yaml
+++ b/docker/nginx/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
 
   argilla:
-    image: argilla/argilla-quickstart:v1.20.0
+    image: argilla/argilla-quickstart:latest
     environment:
       ARGILLA_ENABLE_TELEMETRY: 0
       ARGILLA_BASE_URL: /argilla
