--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -13,7 +13,7 @@ dependencies:
   - pytest
   - pytest-cov
   - pytest-mock
-  - pytest-asyncio!=0.22.0
+  - pytest-asyncio==0.21.1 # Pinning version 0.21.1, version 0.23.2 is causing problems with GitHub workflows
   - pytest-env
   - factory_boy~=3.2.1
   # docs, pandoc needs conda ...
