--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,8 @@ server = [
     "uvicorn[standard] >= 0.15.0,< 0.21.0",
     "smart-open",
     "brotli-asgi >= 1.1,< 1.3",
+    "rq == 1.15.1",
+    "fakeredis == 2.20.1",
     # Database dependencies
     "alembic ~= 1.9.0",
     "SQLAlchemy ~= 2.0.0",
