--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -51,7 +51,7 @@ dependencies:
       - transformers[torch]>=4.30.0 # <- required for DPO with TRL
       - evaluate
       - seqeval
-      - setfit>=0.7.0
+      - setfit>=0.7.0,<1.0.0
       - span_marker
       - openai>=0.27.10,<1.0.0
       - peft
