--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,13 +105,13 @@ integrations = [
     "evaluate",
     "seqeval",
     "sentence-transformers",
-    "setfit>=0.7.0",
+    "setfit>=0.7.0,<1.0.0",
     "span_marker",
     "openai>=0.27.10,<1.0.0",
     "peft",
     "trl>=0.5.0",
     # To find the notebook name from within a notebook
-    "ipynbname"
+    "ipynbname",
 ]
 tests = [
     "pytest",
