--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,7 +107,7 @@ integrations = [
     "sentence-transformers",
     "setfit>=0.7.0",
     "span_marker",
-    "textdescriptives>=2.7.0",
+    "textdescriptives>=2.7.0,<3.0.0",
     "openai>=0.27.10,<1.0.0",
     "peft",
     "trl>=0.5.0",
