--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -44,7 +44,7 @@ dependencies:
       - pgmpy
       - plotly>=4.1.0
       - snorkel>=0.9.7
-      - spacy==3.5.3
+      - spacy~=3.6.0
       - https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz
       - spacy-transformers>=1.2.5
       - spacy-huggingface-hub >= 0.0.10
