chore: skip error when no exit code 5

--- a/.github/workflows/run-python-tests.yml
+++ b/.github/workflows/run-python-tests.yml
@@ -104,5 +104,5 @@ jobs:
         env:
           ARGILLA_ENABLE_TELEMETRY: 0
         run: |
-          pip install "pydantic~=2.0"
-          pytest ${{ inputs.pytestArgs }} -vs
+          pip install "pydantic~=2.0" pytest-custom_exit_code
+          pytest --suppress-no-test-exit-code ${{ inputs.pytestArgs }} -vs
