ci: Fix installing argilla server

--- a/.github/workflows/end2end-examples.yml
+++ b/.github/workflows/end2end-examples.yml
@@ -85,7 +85,7 @@ jobs:
         env:
           ARGILLA_ENABLE_TELEMETRY: 0
         run: |
-          pip install -e .
+          pip install -e ".[server]"
           python -m argilla server database migrate
           python -m argilla server database users create_default
           uvicorn argilla.server.app:app --port 6900 --host 0.0.0.0 &
