feat: 4018 feature add out of the box embedding support via clientfeedbackintegrations (#4454)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

I added support for `sentence-transformers` via the introduction of the
`SentenceTransformersExtractor`. During the implementation, I fixed some
minor issues.

- replaced the `vector_settings_by_name` that had been defined twice for
the `remote` dataset and once within the `local` dataset, by the method
we defined in the shared `base`.
- updated the `__repr__` of the dataset to include the
`vector_settings`.
- rewrote some code of the `TextDescriptivesExtractor` to align the
structure and usage of both extractors.
- resolved a bug in the `TextDescriptivesExtractor`, where we might
update records from wrong indices with embedding during simultaneous IO.
- removed unit tests for the `TextDescriptivesExtractor` and created
integration tests instead.
- removed some unused imoports
 
Closes #4018 

**Type of change**

(Please delete options that are not relevant. Remember to title the PR
according to the type of change)

- [X] New feature (non-breaking change which adds functionality)
- [X] Refactor (change restructuring the codebase without changing
functionality)
- [X] Improvement (change adding some improvement to an existing
functionality)

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes. And
ideally, reference `tests`)

- [X] integration/**/**/integration/test_textdescriptives.py
- [X] integration/**/**/integration/test_sentencetransformerx.py

**Checklist**

- [x] I added relevant documentation
- [x] I followed the style guideline

--- a/environment_dev.yml
+++ b/environment_dev.yml
@@ -46,6 +46,7 @@ dependencies:
       - snorkel>=0.9.7
       - spacy~=3.6.0
       - https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz
+      - sentence-transformers>=2.0.0,<3.0.0
       - spacy-transformers>=1.2.5
       - spacy-huggingface-hub >= 0.0.10
       - transformers[torch]>=4.30.0 # <- required for DPO with TRL
