--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ integrations = [
     "sentence-transformers",
     "setfit>=0.7.0,<1.0.0",
     "span_marker",
+    "sentence-transformers>=2.0.0,<3.0.0",
     "textdescriptives>=2.7.0,<3.0.0",
     "openai>=0.27.10,<1.0.0",
     "peft",
