add missing deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ dependencies = [
     "pandas >=1.0.0,<2.0.0",
     # Aligned pydantic version with server fastAPI
     "pydantic >= 1.10.7",
+    # OAuth2 integration
+    "fastapi-oauth2 == 1.0.0b3",
+    "python-dotenv ~= 1.0.0",
     # monitoring
     "wrapt >= 1.13,< 1.15",
     # weaksupervision
