--- a/docker/nginx/docker-compose.yaml
+++ b/docker/nginx/docker-compose.yaml
@@ -14,5 +14,6 @@ services:
     environment:
       ARGILLA_ENABLE_TELEMETRY: 0
       ARGILLA_BASE_URL: /argilla
+      ARGILLA_LOCAL_AUTH_SECRET_KEY: ${ARGILLA_LOCAL_AUTH_SECRET_KEY:? Please generate a 32 character random string with `openssl rand -hex 32`}
     ports:
       - "6900:6900"
