--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,33 +48,7 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 server = [
-    # Basic dependencies
-    "fastapi >= 0.103.1,< 1.0.0",
-    "pydantic >= 1.10.7,< 2.0",
-    "uvicorn[standard] >= 0.15.0,< 0.25.0",
-    "opensearch-py ~= 2.0.0",
-    "elasticsearch8[async] ~= 8.7.0",
-    "smart-open",
-    "brotli-asgi >= 1.1,< 1.3",
-    # Database dependencies
-    "alembic ~= 1.9.0",
-    "SQLAlchemy ~= 2.0.0",
-    "greenlet >= 2.0.0",
-    # Async SQLite
-    "aiosqlite >=0.19.0",
-    # metrics
-    "scikit-learn >= 0.24.2",
-    # Statics server
-    "aiofiles >= 0.6,< 22.2",
-    "PyYAML >= 5.4.1,< 6.1.0",
-    # security dependencies
-    "python-multipart ~= 0.0.5",
-    "python-jose[cryptography] >= 3.2,< 3.4",
-    "passlib[bcrypt] ~= 1.7.4",
-    # Info status
-    "psutil >= 5.8, <5.10",
-    # Telemetry
-    "segment-analytics-python == 2.2.0",
+    "argilla-server==1.23.0-dev4"
 ]
 postgresql = [
     "psycopg2 ~= 2.9.5; sys_platform != 'darwin'",
