--- a/k8s/argilla-server-deployment.yaml
+++ b/k8s/argilla-server-deployment.yaml
@@ -27,7 +27,7 @@ spec:
           env:
             - name: ARGILLA_ELASTICSEARCH
               value: "http://elasticsearch:9200"
-            - name: ARGILLA_LOCAL_AUTH_SECRET_KEY
+            - name: ARGILLA_AUTH_SECRET_KEY
               value: "CHANGE_ME"
           ports:
             - containerPort: 6900
